Revert "Prevent inner elements of content items from overlapping the modal footer"
This reverts commit 1d3c8fa475224e78c0e952f8411116cdaf339943.

--- a/src/collection-preferences/content-display/styles.scss
+++ b/src/collection-preferences/content-display/styles.scss
@@ -30,6 +30,4 @@
   position: relative;
   list-style: none;
   padding: 0;
-  /* Prevent inner elements from eventually overlapping the footer */
-  z-index: 0;
 }
